fix : 리뷰에 따른 변경 적용 (isBlank, static method)